--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                     <div class="field" id="field1">
                         <h2>ImageStyle</h2>
                         <div class="icon-buttons">
-                            <button class="icon-button" id="vivid">
+                            <button class="icon-button" id="Vivid">
                                 <i class="fas fa-sun"></i> <!-- Sunshine icon -->
                             </button>
-                            <button class="icon-button" id="natural">
+                            <button class="icon-button" id="Natural">
                                 <i class="fas fa-leaf"></i> <!-- Leaves icon -->
                             </button>
                         </div>
@@ -31,10 +31,10 @@
                     <div class="field" id="field2">
                         <h2>ImageQuality</h2>
                         <div class="icon-buttons">
-                            <button class="icon-button" id="hd" style="font-weight: bold;">
+                            <button class="icon-button" id="HD" style="font-weight: bold;">
                                 HD <!-- Text representation for HD -->
                             </button>
-                            <button class="icon-button" id="standard" style="font-weight: bold;">
+                            <button class="icon-button" id="Standard" style="font-weight: bold;">
                                 SD <!-- Text representation for SD -->
                             </button>
                         </div>
@@ -44,23 +44,23 @@
                     <div class="field" id="field3">
                         <h2>ImageSize</h2>
                         <div class="icon-buttons">
-                            <button class="icon-button" id="desktop">
+                            <button class="icon-button" id="Desktop">
                                 <!-- Desktop icon or similar -->
                                 <i class="fas fa-desktop"></i>
                             </button>
-                            <button class="icon-button" id="website">
+                            <button class="icon-button" id="Website">
                                 <!-- Website icon or similar -->
                                 <i class="fas fa-globe"></i>
                             </button>
-                            <button class="icon-button" id="landscape">
+                            <button class="icon-button" id="Landscape">
                                 <!-- Landscape icon or similar -->
                                 <i class="fas fa-mountain"></i>
                             </button>
-                            <button class="icon-button" id="portrait">
+                            <button class="icon-button" id="Portrait">
                                 <!-- Portrait icon or similar -->
                                 <i class="fas fa-user-alt"></i>
                             </button>
-                            <button class="icon-button" id="square">
+                            <button class="icon-button" id="Square">
                                 <!-- Square icon or similar -->
                                 <i class="fas fa-square"></i>
                             </button>
