--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
             <div class="card" id="card1">
                 <div class="top-layer">
                     <div class="field" id="field1">
-                        <h2>ImageStyle</h2>
+                        <h2>Image Style</h2>
                         <div class="icon-buttons">
-                            <button class="icon-button" id="Vivid">
+                            <button class="icon-button" id="Vivid" style="background-color: #FFFFFF;">
                                 <i class="fas fa-sun"></i> <!-- Sunshine icon -->
                             </button>
-                            <button class="icon-button" id="Natural">
+                            <button class="icon-button" id="Natural" style="background-color: #FFFFFF;">
                                 <i class="fas fa-leaf"></i> <!-- Leaves icon -->
                             </button>
                         </div>
                     </div>
                     <div class="field" id="field2">
-                        <h2>ImageQuality</h2>
+                        <h2>Image Quality</h2>
                         <div class="icon-buttons">
-                            <button class="icon-button" id="HD" style="font-weight: bold;">
+                            <button class="icon-button" id="HD" style="font-weight: bold; background-color: #FFFFFF;">
                                 HD <!-- Text representation for HD -->
                             </button>
-                            <button class="icon-button" id="Standard" style="font-weight: bold;">
+                            <button class="icon-button" id="Standard" style="font-weight: bold; background-color: #FFFFFF;">
                                 SD <!-- Text representation for SD -->
                             </button>
                         </div>
@@ -42,25 +42,25 @@
                 </div>
                 <div class="middle-layer">
                     <div class="field" id="field3">
-                        <h2>ImageSize</h2>
+                        <h2>Image Size</h2>
                         <div class="icon-buttons">
-                            <button class="icon-button" id="Desktop">
+                            <button class="icon-button" id="Desktop" style="background-color: #FFFFFF;">
                                 <!-- Desktop icon or similar -->
                                 <i class="fas fa-desktop"></i>
                             </button>
-                            <button class="icon-button" id="Website">
+                            <button class="icon-button" id="Website" style="background-color: #FFFFFF;">
                                 <!-- Website icon or similar -->
                                 <i class="fas fa-globe"></i>
                             </button>
-                            <button class="icon-button" id="Landscape">
+                            <button class="icon-button" id="Landscape" style="background-color: #FFFFFF;">
                                 <!-- Landscape icon or similar -->
                                 <i class="fas fa-mountain"></i>
                             </button>
-                            <button class="icon-button" id="Portrait">
+                            <button class="icon-button" id="Portrait" style="background-color: #FFFFFF;">
                                 <!-- Portrait icon or similar -->
                                 <i class="fas fa-user-alt"></i>
                             </button>
-                            <button class="icon-button" id="Square">
+                            <button class="icon-button" id="Square" style="background-color: #FFFFFF;">
                                 <!-- Square icon or similar -->
                                 <i class="fas fa-square"></i>
                             </button>
@@ -72,7 +72,7 @@
                         <h2>Prompt</h2>
                         <div class="prompt-field">
                             <input type="text" placeholder="Ask me anything..." id="promptInput">
-                            <button class="icon-button" id="submit">
+                            <button class="icon-button" id="submit" style="background-color: #FFFFFF;">
                                 <!-- Sparkle icon or similar -->
                                 <i class="far fa-paper-plane"></i> 
                             </button> 
@@ -89,13 +89,8 @@
                     <button class="icon-button-card2 delete-button-card2" id="deleteButtonCard2">
                         <i class="fas fa-trash-alt"></i>
                     </button>
-                    <button class="icon-button-card2 left-arrow-button-card2" id="leftArrowButtonCard2">
-                        <i class="fas fa-arrow-left"></i>
-                    </button>
-                    <button class="icon-button-card2 right-arrow-button-card2" id="rightArrowButtonCard2">
-                        <i class="fas fa-arrow-right"></i>
-                    </button>
-                    <button class="download-button-card2" id="downloadButtonCard2">Download</button>
+
+                    <button class="download-button-card2" id="downloadButtonCard2" style="font-weight: bold;">Download</button>
                 </div>
             </div>                            
             <div class="card" id="card3">
@@ -113,7 +108,7 @@
                     <button class="icon-button-card3 right-arrow-button-card3" id="rightArrowButtonCard3">
                         <i class="fas fa-arrow-right"></i>
                     </button>
-                    <button class="download-button-card3" id="downloadButtonCard3">Download</button>
+                    <button class="download-button-card3" id="downloadButtonCard3" style="font-weight: bold;">Download</button>
                 </div>
             </div>
         </div>
